crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__future_from.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
future_from.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import __future__
2 | | from __future__ import annotations
  | |__________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+from __future__ import annotations
1 2 | import __future__
2   |-from __future__ import annotations
