crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__if_elif_else.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
if_elif_else.py:6:5: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
4 |       from setuptools.command.sdist import sdist as _sdist
5 |   else:
6 | /     from setuptools.command.sdist import sdist as _sdist
7 | |     from distutils.command.sdist import sdist as _sdist
  | |_______________________________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
3 3 | elif "setuptools" in sys.modules:
4 4 |     from setuptools.command.sdist import sdist as _sdist
5 5 | else:
  6 |+    from distutils.command.sdist import sdist as _sdist
6 7 |     from setuptools.command.sdist import sdist as _sdist
7   |-    from distutils.command.sdist import sdist as _sdist
