crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__import_from_after_import.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
import_from_after_import.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from collections import Collection
2 | | import os
  | |_________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+import os
1 2 | from collections import Collection
2   |-import os
