crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__inline_comments.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
inline_comments.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
 1 | / from a.prometheus.metrics import (  # type:ignore[attr-defined]
 2 | |     TERMINAL_CURRENTLY_RUNNING_TOTAL,
 3 | | )
 4 | |
 5 | | from b.prometheus.metrics import (
 6 | |     TERMINAL_CURRENTLY_RUNNING_TOTAL,  # type:ignore[attr-defined]
 7 | | )
 8 | |
 9 | | from c.prometheus.metrics import TERMINAL_CURRENTLY_RUNNING_TOTAL  # type:ignore[attr-defined]
10 | |
11 | | from d.prometheus.metrics import TERMINAL_CURRENTLY_RUNNING_TOTAL, OTHER_RUNNING_TOTAL  # type:ignore[attr-defined]
   | |______________________________________________________________________________________^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
1 1 | from a.prometheus.metrics import (  # type:ignore[attr-defined]
2 2 |     TERMINAL_CURRENTLY_RUNNING_TOTAL,
3 3 | )
4   |-
5 4 | from b.prometheus.metrics import (
6 5 |     TERMINAL_CURRENTLY_RUNNING_TOTAL,  # type:ignore[attr-defined]
7 6 | )
8   |-
9   |-from c.prometheus.metrics import TERMINAL_CURRENTLY_RUNNING_TOTAL  # type:ignore[attr-defined]
10   |-
11   |-from d.prometheus.metrics import TERMINAL_CURRENTLY_RUNNING_TOTAL, OTHER_RUNNING_TOTAL  # type:ignore[attr-defined]
  7 |+from c.prometheus.metrics import (
  8 |+    TERMINAL_CURRENTLY_RUNNING_TOTAL,  # type:ignore[attr-defined]
  9 |+)
  10 |+from d.prometheus.metrics import (  # type:ignore[attr-defined]
  11 |+    OTHER_RUNNING_TOTAL,
  12 |+    TERMINAL_CURRENTLY_RUNNING_TOTAL,
  13 |+)
