crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__known_local_folder_closest_separate_local_folder_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
separate_local_folder_imports.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import sys
2 | | import ruff
3 | | import leading_prefix
4 | | import os
5 | | from . import leading_prefix
6 | | from .. import trailing_prefix
7 | | from ruff import check
  | |______________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+import os
1 2 | import sys
  3 |+
  4 |+import leading_prefix
  5 |+
2 6 | import ruff
3   |-import leading_prefix
4   |-import os
5 7 | from . import leading_prefix
6 8 | from .. import trailing_prefix
7 9 | from ruff import check
