crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__leading_prefix.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
leading_prefix.py:1:8: I001 (unsorted-imports) Import block is un-sorted or un-formatted
  |
1 |   x = 1; import sys
  |  ________^
2 | | import os
  | |_________^ I001 (unsorted-imports)
3 |
4 |   if True:
  |
  = help: Organize imports

leading_prefix.py:5:12: I001 (unsorted-imports) Import block is un-sorted or un-formatted
  |
4 |   if True:
5 |       x = 1; import sys
  |  ____________^
6 | |     import os
  | |_____________^ I001 (unsorted-imports)
7 |
8 |   if True:
  |
  = help: Organize imports

leading_prefix.py:10:9: I001 (unsorted-imports) Import block is un-sorted or un-formatted
   |
 8 | if True:
 9 |     x = 1; \
10 |         import os
   |         ^^^^^^^^^ I001 (unsorted-imports)
11 |
12 | x = 1; \
   |
   = help: Organize imports

leading_prefix.py:13:1: I001 (unsorted-imports) Import block is un-sorted or un-formatted
   |
12 | x = 1; \
13 | import os
   | ^^^^^^^^^ I001 (unsorted-imports)
   |
   = help: Organize imports
